--- a/FreeCrmRuFramework/FreeCrmRuFramework.csproj
+++ b/FreeCrmRuFramework/FreeCrmRuFramework.csproj
@@ -38,12 +38,39 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ExtentReports, Version=3.1.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ExtentReports.3.1.3\lib\ExtentReports.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.4.9.5, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Bson, Version=2.4.0.70, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Bson.2.4.0\lib\net45\MongoDB.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver, Version=2.4.0.70, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Driver.2.4.0\lib\net45\MongoDB.Driver.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver.Core, Version=2.4.0.70, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Driver.Core.2.4.0\lib\net45\MongoDB.Driver.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.10.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.10.1\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="RazorEngine, Version=3.9.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
+      <HintPath>..\packages\RazorEngine.3.9.0\lib\net45\RazorEngine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.0.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Razor.3.0.0\lib\net45\System.Web.Razor.dll</HintPath>
+    </Reference>
     <Reference Include="WebDriver, Version=3.14.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Selenium.WebDriver.3.14.0\lib\net45\WebDriver.dll</HintPath>
     </Reference>
@@ -52,11 +79,49 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Components\AddCategory.cs" />
+    <Compile Include="Components\AddCompany.cs" />
+    <Compile Include="Components\AddContacts.cs" />
+    <Compile Include="Components\AddDeal.cs" />
+    <Compile Include="Components\AddEmployee.cs" />
+    <Compile Include="Components\AddGoods.cs" />
+    <Compile Include="Components\AddSource.cs" />
+    <Compile Include="Components\AddStatus.cs" />
+    <Compile Include="LoginPageTest.cs" />
+    <Compile Include="Pages\AboutProjectPage.cs" />
+    <Compile Include="Pages\AdminCatsPage.cs" />
+    <Compile Include="Pages\AdminGoodsPage.cs" />
+    <Compile Include="Pages\AdminPage.cs" />
+    <Compile Include="Pages\AdminRemovePage.cs" />
+    <Compile Include="Pages\AdminSiteCartPage.cs" />
+    <Compile Include="Pages\AdminSourcesPage.cs" />
+    <Compile Include="Pages\AdminStatusDealPage.cs" />
+    <Compile Include="Pages\AdminUsersPage.cs" />
+    <Compile Include="Pages\ContactPage.cs" />
+    <Compile Include="Pages\CustomersPage.cs" />
+    <Compile Include="Pages\DealPage.cs" />
+    <Compile Include="Pages\HomePage.cs" />
+    <Compile Include="Pages\NonLoginPages\ForgotPassPage.cs" />
+    <Compile Include="Pages\NonLoginPages\LandingPage.cs" />
+    <Compile Include="Pages\NonLoginPages\LoginPage.cs" />
+    <Compile Include="Pages\NonLoginPages\RegistrationPage.cs" />
+    <Compile Include="Pages\ProfilePage.cs" />
+    <Compile Include="Pages\ReportDealPage.cs" />
+    <Compile Include="Pages\ReportFunnelPage.cs" />
+    <Compile Include="Pages\ReportManagerPage.cs" />
+    <Compile Include="Pages\ReportPage.cs" />
+    <Compile Include="Pages\TaskPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\CsvReader.cs" />
+    <Compile Include="Tools\DriverInit.cs" />
+    <Compile Include="Tools\TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="license" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="extent-config.xml" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
