--- a/FreeCrmRuFramework/packages.config
+++ b/FreeCrmRuFramework/packages.config
@@ -8,6 +8,14 @@
   <package id="MongoDB.Driver.Core" version="2.4.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net461" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.3" targetFramework="net461" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit.Runners" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
   <package id="RazorEngine" version="3.9.0" targetFramework="net461" />
   <package id="Selenium.Firefox.WebDriver" version="0.21.0" targetFramework="net461" />
   <package id="Selenium.Support" version="3.14.0" targetFramework="net461" />
